# RS_info_process_expt

./: .gitignore  CMakeLists.txt  README.md
expt1/: CMakeLists.txt  README.md  input
expt1/img/img1/: test1.tif  test2.tif
expt1/img/img2/: test0204.tif  test0306.tif
expt1/img/img4/: optical1.tif  optical2.tif
expt1/src/: cv_img_registration.cpp  cv_img_registration.h
expt2/: CMakeLists.txt
expt2/img/: Exp2_TM  Exp2_TM.hdr  Exp2_TM.tif
expt2/src/: PCA_transform.cpp  img_enhancement.cpp
expt3/: README.md  classification.py  classification_PerceptronClassifier.py  test.py
expt3/img/: groundtruth.tif  tm7envi.hdr
